# IREngine1.0

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/: copilot-instructions.md
example/IRS/: deal_data.csv  discount.csv  result.csv  result_cashflows.csv
example/Multi_leg/: deal_data.csv  fixings_1.csv  result.csv  result_cashflows.csv
example/OIS/: deal_data.csv  result.csv  result_cashflows.csv
example/ire_pricer/: deal_data.csv  discount.csv  fixings_1.csv  fixings_2.csv  fwd_1.csv  fwd_2.csv
include/core/: conventions.hpp  date.hpp  error.hpp  ids.hpp  result.hpp  types.hpp
include/ir/core/: conventions.hpp  date.hpp  ids.hpp  result.hpp
include/ir/instruments/: cashflow.hpp  coupons.hpp  leg.hpp  leg_builder.hpp  products.hpp  rate_observations.hpp
include/ir/io/: csv_io.hpp  deal_io.hpp  market_io.hpp
include/ir/market/: bootstrapper.hpp  curves.hpp  market_data.hpp  quotes.hpp  rate_helpers.hpp
include/ir/pricers/: swap_pricer.hpp
include/ir/utils/: interpolation.hpp  math.hpp  piecewise_nodes.hpp  root_finding.hpp
include/utils/: interpolation.hpp  math.hpp  piecewise_nodes.hpp  root_finding.hpp
src/: CMakeLists.txt  IREngine1.0.cpp  IREngine1.0.h
src/apps/: demo_bootstrapper.cpp  ire_price.cpp
src/core/: date.cpp
src/demo/: CMakeLists.txt
src/ir/core/: date.cpp
src/ir/instruments/: coupons.cpp  leg_builder.cpp
src/ir/io/: csv_io.cpp  deal_io.cpp  market_io.cpp
src/ir/market/: bootstrapper.cpp  curves.cpp  market_data.cpp  quotes.cpp  rate_helpers.cpp
src/ir/pricers/: swap_pricer.cpp
src/ir/utils/: interpolation.cpp  piecewise_nodes.cpp  root_finding.cpp
src/utils/: interpolation.cpp  piecewise_nodes.cpp  root_finding.cpp
tests/: CMakeLists.txt
tests/core/: test_date.cpp
tests/ir/core/: test_date.cpp
tests/ir/instruments/: test_leg_builder.cpp  tests_coupons.cpp
tests/ir/market/: test_bootstrapper.cpp
tests/ir/pricers/: test_swap_pricer.cpp
tests/ir/utils/: test_interpolation.cpp  test_root_finding.cpp
tests/utils/: test_interpolation.cpp  test_root_finding.cpp
